[package]
name = "manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
byteorder = "1.4"
chrono = "0.4.31"
ethers = "2.0.11"
ethers-core = "2.0.11"
hex = "0.4"
graphql_client = { version = "0.14.0", features = ["reqwest"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.163"
serde_json = "1.0"
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "ansi",
    "fmt",
    "std",
    "json",
] }

